[package]
name = "rust-julia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
color-eyre = "0.6.3"
pixels = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.16.0"
